Fix `align-repository-header` on gists

--- a/source/features/align-repository-header.css
+++ b/source/features/align-repository-header.css
@@ -1,21 +1,21 @@
 /* Align repo header to the content, just on the left side */
-body:not(.full-width):not(.enterprise) .repohead > * {
-	padding-left: calc(50% - 1280px / 2) !important;
+body:not(.full-width):not(.enterprise) .repohead:not(.gisthead) > * {
+	padding-left: calc(50% - 1280px / 2);
 }
 
 /* Restore the original padding on those 2 elements. The media queries follows GitHub’s values */
-body:not(.full-width):not(.enterprise) .repohead > * > * {
-	margin-left: 16px !important;
+body:not(.full-width):not(.enterprise) .repohead:not(.gisthead) > * > * {
+	margin-left: 16px;
 }
 
 @media (min-width: 768px) {
-	body:not(.full-width):not(.enterprise) .repohead > * > * {
-		margin-left: 24px !important;
+	body:not(.full-width):not(.enterprise) .repohead:not(.gisthead) > * > * {
+		margin-left: 24px;
 	}
 }
 
 @media (min-width: 1012px) {
-	body:not(.full-width):not(.enterprise) .repohead > * > * {
-		margin-left: 32px !important;
+	body:not(.full-width):not(.enterprise) .repohead:not(.gisthead) > * > * {
+		margin-left: 32px;
 	}
 }
